--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,12 @@
     "keywords": [ "pico", "picocms", "pico-cms", "simple", "flat-file", "cms", "content-management", "website", "markdown-to-html", "php", "markdown", "yaml", "twig", "composer-project" ],
     "homepage": "http://picocms.org/",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "github",
+            "url": "https://github.com/pixelbrackets/pico-core"
+        }
+    ],
     "authors": [
         {
             "name": "Daniel Rudolf",
@@ -26,11 +32,15 @@
         "source": "https://github.com/picocms/Pico"
     },
     "require": {
-        "picocms/pico": "^2.1",
+        "picocms/pico": "dev-php8-update as 2.1.4",
         "picocms/pico-theme": "^2.1",
-        "picocms/pico-deprecated": "^2.1",
         "picocms/composer-installer": "^1.0"
     },
     "minimum-stability": "beta",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "picocms/composer-installer": true
+        }
+    }
 }
